# libraw

./: .gitignore  CMakeLists.txt  README.md  build.sh  init_libraw.sh  library.cpp  library.h  libraw.podspec
include/: ImageAdjuster.h  PixRaw.h  RawAdjustments.h  RawData.h  RawImage.h  RawMetadata.h
librawPodDemo/: Podfile
librawPodDemo/librawPodDemo/: AppDelegate.swift  PixRaw.h  PixRaw.mm  ViewController.swift  librawPodDemo-Bridging-Header.h
librawPodDemo/librawPodDemo.xcodeproj/: project.pbxproj
librawPodDemo/librawPodDemo.xcodeproj/project.xcworkspace/xcuserdata/nenhall.xcuserdatad/: UserInterfaceState.xcuserstate
librawPodDemo/librawPodDemo.xcodeproj/xcuserdata/nenhall.xcuserdatad/xcschemes/: xcschememanagement.plist
librawPodDemo/librawPodDemo.xcworkspace/: contents.xcworkspacedata
librawPodDemo/librawPodDemo.xcworkspace/xcuserdata/nenhall.xcuserdatad/: UserInterfaceState.xcuserstate
librawPodDemo/librawPodDemo/Base.lproj/: Main.storyboard
src/: ImageAdjuster.cpp  PixRaw.cpp  RawData.cpp  RawImage.cpp  RawMetadata.cpp
